update NODE_ENV for production mode add REACT_APP_API_URL

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Dependencies
-node_modules/
+node_modules
 /.pnp
 .pnp.js
 
@@ -7,8 +7,9 @@ node_modules/
 /coverage
 
 # Production
-/build
 /client/build
+/build
+/dist
 
 # Environment variables
 .env
@@ -23,11 +24,16 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
-.idea/
-.vscode/
-*.swp
-*.swo
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# OS files
+# Mac specific
 .DS_Store
-Thumbs.db 
+
+# Vercel
+.vercel 
